set(LIB_NAME BSON)
set(LIB_SOURCE Document.cpp)
add_library(${LIB_NAME} STATIC ${LIB_SOURCE})
add_library(${LIB_NAME}_test SHARED ${LIB_SOURCE})
install(TARGETS ${LIB_NAME}_test DESTINATION bin/test)
target_include_directories(${LIB_NAME} PUBLIC ${LIB_INCLUDE})
target_include_directories(${LIB_NAME}_test PUBLIC ${LIB_INCLUDE})
set(RT_COMMON_NAMES ${RT_COMMON_NAMES} ${LIB_NAME} PARENT_SCOPE)